testsuite/tests/polykinds/T7328.stderr
T7328.hs:8:34: error: [GHC-27958]
    • Expected kind ‘k0’, but ‘f’ has kind ‘k1 -> k0’
    • In the first argument of ‘Foo’, namely ‘f’
      In the first argument of ‘Proxy’, namely ‘(Foo f)’
      In the type signature: foo :: a ~ f i => Proxy (Foo f)

